Fix missing box shadow on mobile #35

--- a/apps/mull-ui/src/app/components/navigation-bar/navigation-bar.scss
+++ b/apps/mull-ui/src/app/components/navigation-bar/navigation-bar.scss
@@ -14,8 +14,8 @@
     padding: 1em 0;
 
     justify-content: center;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
   }
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
 }
 
 @mixin nav-button {
